using ejs template engine and started the form + feedback

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/bidetaggle/zero-waste-apartment#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^2.7.4",
+    "express": "^4.17.1",
+    "express-validator": "^6.2.0"
   }
 }
